fixup! dark mode video button

--- a/apps/beeai-web/src/modules/home/ShowcaseVideo.module.scss
+++ b/apps/beeai-web/src/modules/home/ShowcaseVideo.module.scss
@@ -40,6 +40,10 @@
     display: none;
   }
   :global(.cds--btn) {
+    svg {
+      fill: $black;
+    }
+
     &:focus,
     &:active {
       background-color: transparent;
